--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
 
     <link rel="stylesheet" href="./style.css">
-    <title>Dom-with-Bom-project-3 </title>
+    <title>Shop-app-Dom-with-Bom-project--3 </title>
 </head>
 <body>
     
@@ -88,7 +88,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2>Update product product</h2>
+                    <h2>Update product Form</h2>
                     <button class="btn-close m-3" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
@@ -138,5 +138,5 @@
 </body>
 </html>
 
-z
 
+<i class="fas"></i>
